--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 <!-- Stylesheet
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
@@ -45,7 +46,6 @@
       <ul class="nav navbar-nav">
         <li><a href="#about" class="page-scroll">About</a></li>
         <li><a href="#restaurant-menu" class="page-scroll">Countries</a></li>
-        <li><a href="#team" class="page-scroll">Contact</a></li>
         <li><a href="#features" class="page-scroll">Testimonials</a></li>
       </ul>
     </div>
@@ -184,10 +184,6 @@
           <div class="section-title">
             <h2>Why us?</h2>
           </div>
-<<<<<<< HEAD
-=======
-
->>>>>>> d1509e93f0c0635d8a6b1fd92ed69d90ed670156
           <p>Because we are the best at what we do, Because we don't give you a half services
           and leave you to hustle. We want to serve you. </p>
           <div class="section-title">
@@ -359,25 +355,7 @@
     </div>
   </div>
 </div>
-<!-- Team Section -->
-<div id="team">
-  <div class="container">
-    <div id="row">
-      <div class="col-md-6">
-        <div class="col-md-10 col-md-offset-1">
-          <div class="section-title">
-            <h2>Get in touch</h2>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="team-img"><img class="dog"src="img/chef.jpg" alt="..." ></div>
-      </div>
-    </div>
-  </div>
-</div>
+
 <!-- Features Section -->
 <div id="features" class="text-center">
   <div class="container">
@@ -445,6 +423,7 @@
     </div>
   </div>
 </div>
+  <a class="gobottombtn" href="#footer"> <i class="fas fa-arrow-down"></i> </a>
 <div id="footer">
   <div class="container text-center">
     <div class="col-md-6">
