--- a/index.html
+++ b/index.html
@@ -184,10 +184,6 @@
           <div class="section-title">
             <h2>Why us?</h2>
           </div>
-<<<<<<< HEAD
-=======
-
->>>>>>> d1509e93f0c0635d8a6b1fd92ed69d90ed670156
           <p>Because we are the best at what we do, Because we don't give you a half services
           and leave you to hustle. We want to serve you. </p>
           <div class="section-title">
@@ -209,131 +205,129 @@
     <div class="section-title text-center">
       <h2>Countries</h2>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
+    <div class="ten">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Malaysia</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/malaysia.html"> <h5>Learn more</h5> </a>
+            <a href="countries/malaysia.html"> <h5 class="learnmore" >Learn more</h5> </a>
           </div>
           <div class="menu-item">
-            <div class="menu-item-description"></div>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Taiwan</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/taiwan.html"> <h5>Learn more</h5> </a>
+            <a href="countries/taiwan.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
+    <div class="ten">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Indonesia</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/indonesia.html"> <h5>Learn more</h5> </a>
+            <a href="countries/indonesia.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">China</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/china.html"> <h5>Learn more</h5> </a>
+            <a href="countries/china.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
+    <div class="ten">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Japan</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/japan.html"> <h5>Learn more</h5> </a>
+            <a href="countries/japan.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
           <div class="menu-item">
-            <div class="menu-item-description"></div>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">South Korea</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/korea.html"> <h5>Learn more</h5> </a>
+            <a href="countries/korea.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
+    <div class="ten">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Cambodia</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/cambodia.html"> <h5>Learn more</h5> </a>
+            <a href="countries/cambodia.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
           <div class="menu-item">
             <div class="menu-item-description"></div>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Vietnam</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/vietnam.html"> <h5>Learn more</h5> </a>
+            <a href="countries/vietnam.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
+    <div class="ten">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Philippines</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/philipinnes.html"> <h5>Learn more</h5> </a>
+            <a href="countries/philipinnes.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Thailand</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/thailand.html"> <h5>Learn more</h5> </a>
+            <a href="countries/thailand.html"> <h5 class="learnmore">Learn more</h5> </a>
           </div>
         </div>
       </div>
