--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+
 <!-- Stylesheet
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
@@ -421,7 +421,7 @@
     </div>
   </div>
 </div>
-  <a class="gobottombtn" href="#footer"> <i class="fas fa-arrow-down"></i> </a>
+  <a class="gobottombtn" href="#footer"> Apply Now </a>
 <div id="footer">
   <div class="container text-center">
     <div class="col-md-6">
