Finished the countries section in all its entirity

--- a/countries/malaysia.html
+++ b/countries/malaysia.html
@@ -40,43 +40,40 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_1.jpg);">
+		   	<li style="background-image: url(images/mal1.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem Ipsum</h1>
-									<h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit Anas</h2>
-									<p><a class="btn btn-primary btn-lg" href="#">Apply now</a></p>
+			   					<h1> <b>Malaysia</b> </h1>
+									<h2> <i>Land of Indigenous Malay</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_2.jpg);">
+		   	<li style="background-image: url(images/mal2.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem ipsum dolor sit amet.</h1>
-									<h2>Brought to you by Anas</h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Apply now</a></p>
+								<h1> <b>Malaysia</b> </h1>
+								<h2> <i>Land of Indigenous Malay</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_3.jpg);">
+		   	<li style="background-image: url(images/mal3.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem ipsum dolor sit amet.</h1>
-									<h2>Brought to you by Anas</h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Apply now</a></p>
+								<h1> <b>Malaysia</b> </h1>
+								<h2> <i>Land of Indigenous Malay</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -129,16 +126,16 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Starts &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa fa-check" color="red" aria-hidden="true"></i>
-							</li>
-	                        <li class="pricing__feature">Ends &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa fa-plane" aria-hidden="true"></i> </li>
-	                        <li class="pricing__feature">Agent fee</li>
-	                        <li class="pricing__feature">Includes</li>
-	                        <li class="pricing__feature">WE also</li>
-	                        <li class="pricing__feature">Bannanana</li>
-	                         <li class="pricing__feature">Peaches and cream</li>
+	                        <li class="pricing__feature">Starts</li>
+	                        <li class="pricing__feature">Ends</li>
+	                        <li class="pricing__feature">English Majors</li>
+	                        <li class="pricing__feature">Chinese Majors</li>
+	                        <li class="pricing__feature">Language year</li>
+	                        <li class="pricing__feature">Bachelors</li>
+							<li class="pricing__feature">Masters</li>
+							<li class="pricing__feature">PhD</li>
+							<li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                   </div>
 					</div>
@@ -157,45 +154,19 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
+	                        <li class="pricing__feature">Starts</li>
+	                        <li class="pricing__feature">Ends</li>
+	                        <li class="pricing__feature">English Majors</li>
+	                        <li class="pricing__feature">Chinese Majors</li>
+	                        <li class="pricing__feature">Language year</li>
+	                        <li class="pricing__feature">Bachelors</li>
+							<li class="pricing__feature">Masters</li>
+							<li class="pricing__feature">PhD</li>
+							<li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                  </div>
 					</div>
-					<div class="col-md-4 animate-box">
-                  <div class="pricing__item">
-                  	<div class="wrap-price">
-	                     <h3 class="pricing__title">Others</h3>
-							</div>
-                     <div class="pricing__price">
-                        <span class="pricing__anim pricing__anim--1">
-								<span class="pricing__currency"></span>
-                        </span>
-                        <span class="pricing__anim pricing__anim--2">
-								<span class="pricing__period"> <h2>All Year</h2> </span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
-                     </div>
-                  </div>
-               </div>
             </div>
 			</div>
 		</div>
