--- a/countries/taiwan.html
+++ b/countries/taiwan.html
@@ -40,43 +40,40 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_1.jpg);">
+		   	<li style="background-image: url(images/twa1.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem Ipsum</h1>
-									<h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit Anas</h2>
-									<p><a class="btn btn-primary btn-lg" href="#">Apply now</a></p>
+			   					<h1> <b>Taiwan</b> </h1>
+									<h2> <i>The Ilha Formosa</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_2.jpg);">
+		   	<li style="background-image: url(images/twa2.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem ipsum dolor sit amet.</h1>
-									<h2>Brought to you by Anas</h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Apply now</a></p>
+								<h1> <b>Taiwan</b> </h1>
+								<h2> <i>The Ilha Formosa</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_3.jpg);">
+		   	<li style="background-image: url(images/twa3.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem ipsum dolor sit amet.</h1>
-									<h2>Brought to you by Anas</h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Apply now</a></p>
+								<h1> <b>Taiwan</b> </h1>
+								<h2> <i>The Ilha Formosa</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
