--- a/countries/japan.html
+++ b/countries/japan.html
@@ -40,43 +40,40 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_1.jpg);">
+		   	<li style="background-image: url(images/jap1.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem Ipsum</h1>
-									<h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit Anas</h2>
-									<p><a class="btn btn-primary btn-lg" href="#">Apply now</a></p>
+			   					<h1> <b>Japan</b> </h1>
+								<h2> <i>The country of the rising sun</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_2.jpg);">
+		   	<li style="background-image: url(images/jap2.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem ipsum dolor sit amet.</h1>
-									<h2>Brought to you by Anas</h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Apply now</a></p>
+								<h1> <b>Japan</b> </h1>
+								<h2> <i>The country of the rising sun</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_3.jpg);">
+		   	<li style="background-image: url(images/jap3.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Lorem ipsum dolor sit amet.</h1>
-									<h2>Brought to you by Anas</h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Apply now</a></p>
+								<h1> <b>Japan</b> </h1>
+								<h2> <i>The country of the rising sun</i> </h2>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -118,15 +115,15 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Starts</li>
-	                        <li class="pricing__feature">Ends</li>
-	                        <li class="pricing__feature">English Majors</li>
-	                        <li class="pricing__feature">Chinese Majors</li>
-	                        <li class="pricing__feature">Language year</li>
-	                        <li class="pricing__feature">Bachelors</li>
-							<li class="pricing__feature">Masters</li>
-							<li class="pricing__feature">PhD</li>
-							<li class="pricing__feature">Cultural Visit</li>
+	                        <li class="pricing__feature">Starts&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; November</li>
+	                        <li class="pricing__feature">Ends &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; December</li>
+	                        <li class="pricing__feature">English Majors&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times"></i> </li>
+	                        <li class="pricing__feature">Japanese Majors&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
+	                        <li class="pricing__feature">Language year&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
+	                        <li class="pricing__feature">Bachelors&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times"></i> </li>
+							<li class="pricing__feature">Masters&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times"></i> </li>
+							<li class="pricing__feature">PhD &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times"></i> </li>
+							<li class="pricing__feature">Cultural Visit&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times"></i> </li>
 	                     </ul>
                      </div>
                   </div>
@@ -146,15 +143,15 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Starts</li>
-	                        <li class="pricing__feature">Ends</li>
-	                        <li class="pricing__feature">English Majors</li>
-	                        <li class="pricing__feature">Chinese Majors</li>
-	                        <li class="pricing__feature">Language year</li>
-	                        <li class="pricing__feature">Bachelors</li>
-							<li class="pricing__feature">Masters</li>
-							<li class="pricing__feature">PhD</li>
-							<li class="pricing__feature">Cultural Visit</li>
+	                        <li class="pricing__feature">Starts&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; November</li>
+	                        <li class="pricing__feature">Ends &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; December</li>
+	                        <li class="pricing__feature">English Majors&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-times"></i> </li>
+	                        <li class="pricing__feature">Japanese Majors&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
+	                        <li class="pricing__feature">Language year&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
+	                        <li class="pricing__feature">Bachelors&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
+							<li class="pricing__feature">Masters&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
+							<li class="pricing__feature">PhD &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
+							<li class="pricing__feature">Cultural Visit&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <i class="fa fa-check"></i> </li>
 	                     </ul>
                      </div>
                  </div>
