--- a/index.html
+++ b/index.html
@@ -206,131 +206,89 @@
       <h2>Countries</h2>
     </div>
     <div class="ten">
+      <a href="countries/malaysia.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Malaysia</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/malaysia.html"> <h5 class="learnmore" >Learn more</h5> </a>
-          </div>
-          <div class="menu-item">
-          </div>
         </div>
       </div>
+      </a>
+      <a href="countries/taiwan.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Taiwan</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/taiwan.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
         </div>
       </div>
+      </a>
     </div>
     <div class="ten">
+      <a href="countries/indonesia.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Indonesia</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/indonesia.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
         </div>
       </div>
+      </a>
+      <a href="countries/china.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">China</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/china.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
         </div>
       </div>
+      </a>
     </div>
     <div class="ten">
+      <a href="countries/japan.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Japan</h2>
           <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/japan.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
-          <div class="menu-item">
           </div>
         </div>
       </div>
+      </a>
+      <a href="countries/korea.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">South Korea</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/korea.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
         </div>
       </div>
+      </a>
     </div>
     <div class="ten">
+      <a href="countries/cambodia.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Cambodia</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/cambodia.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
           <div class="menu-item">
             <div class="menu-item-description"></div>
           </div>
         </div>
       </div>
+      </a>
+      <a href="countries/vietnam.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Vietnam</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/vietnam.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
         </div>
       </div>
+      </a>
     </div>
     <div class="ten">
+      <a href="countries/philipinnes.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Philippines</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/philipinnes.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
         </div>
       </div>
+      </a>
+      <a href="countries/thailand.html">
       <div class="country-content">
         <div class="menu-section">
           <h2 class="menu-section-title">Thailand</h2>
-          <div class="menu-item">
-            <div class="menu-item-name">Lorem Ipsum</div>
-            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-            <br><br>
-            <a href="countries/thailand.html"> <h5 class="learnmore">Learn more</h5> </a>
-          </div>
         </div>
       </div>
+      </a>
     </div>
   </div>
 </div>
