--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     </div>
   </div>
 </div>
-  <a class="gobottombtn" href="#footer"> Apply Now </a>
+  <a class="gobottombtn" href="#footer">Apply Now!!</a>
 <div id="footer">
   <div class="container text-center">
     <div class="col-md-6">
